k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000  # the port that other Depolyment's pods access this one's service
      targetPort: 3000 # the actual port of the web services in this deployment
      # no nodePort specs in these Cluster IP services because you can't access these from the outside
